      - 'get_pin': fixed to not attempt to obtain installed version for source
        packages.
    - System:
      - Resolver,Resolvers/Native,Resolvers/External:
        - New method 'unsatisfy_relation_expression'.
    - Download:
      - Manager:
        - Worker process: fixed race condition in sending error of the last
          download to progress.
  * po:
    - getpot: specified UTF-8 encoding for input files, fixing xgettext error.
      Thanks to Frederik Schwarzer <schwarzerf@gmail.com>.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 01 Jul 2009 13:25:04 +0300

cupt (0.2.3) unstable; urgency=medium

  * Cupt:
    - System:
      - Worker:
        - 'update_release_and_index_data': fixed downloading of non-compressed
          indexes.
        - 'update_release_and_index_data': fixed removing downloaded file after
          uncompressing.
        - 'update_release_and_index_data': remove the downloaded Release.gpg if
          signature verification failed and 'cupt::update::keep-bad-signatures'
          is false (this is the default setting) for the compatibility with APT.
          Thanks to Goswin von Brederlow <goswin-v-b@web.de>.
          (Closes: #533753). Urgency is set to 'medium' because of this fix.
        - 'update_release_and_index_data': download index file even if
          signature download/check failed.
      - Resolvers/Native:
        - Reworked solution rank system.
        - Dropped 'first-good' solution chooser. It can be mimicked by setting
          'max-solution-count' option to 1.
        - Run cleaning auto-installed packages also before resolving, aiming
          to reduce number of solutions resolver should work with.
        - Made "zero" line for actions 400 points less, affecting ordering
          solutions for processing for default 'fair' resolver type. Leads to
          significant (several times) speed-up for some cases. Makes possible