@@ -123,12 +123,12 @@ our $version_string_regex =
 			\d+: # epoch
 		)? # which is non-mandatory
 		(
-			[0-9] # should start with a number
+			# should start with a number really
 			(?:
 				(?(<EPOCH>):|0) # allow ':' if there was valid epoch, otherwise something neutral
 					| # or
 				[a-zA-Z+0-9~.-] # upstream version allowed characters
-			)*? # '?' to not eat last '-' before debian revision
+			)+? # '?' to not eat last '-' before debian revision
 		)
 		(?:
 			-
